--- a/package.json
+++ b/package.json
@@ -14,11 +14,12 @@
     "bcrypt": "^5.0.1",
     "bootstrap": "^4.6.0",
     "config": "^3.3.6",
+    "cors": "^2.8.5",
     "express": "^4.17.1",
     "express-validator": "^6.10.1",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^5.12.7",
     "mongodb": "^3.6.6",
+    "mongoose": "^5.12.7",
     "mysql": "^2.18.1",
     "node-sass": "^5.0.0",
     "react": "^17.0.2",
