--- a/package.json
+++ b/package.json
@@ -20,8 +20,6 @@
     "jsonwebtoken": "^8.5.1",
     "mongodb": "^3.6.6",
     "mongoose": "^5.12.7",
-    "mysql": "^2.18.1",
-    "node-sass": "^5.0.0",
     "react": "^17.0.2",
     "react-bootstrap": "^1.5.2",
     "react-dom": "^17.0.2",
@@ -56,5 +54,6 @@
   "devDependencies": {
     "concurrently": "^6.0.2",
     "nodemon": "^2.0.7"
-  }
+  },
+  "optionalDependencies": []
 }
