--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
     "server": "nodemon app.js",
     "client": "npm run start --prefix client",
     "client:build": "npm run build --prefix client",
-    "dev": "NODE_ENV=development concurrently \"npm run server\" \"npm run client\""
+    "dev": "cross-env NODE_ENV=production concurrently \"npm run server\" \"npm run client\""
   },
   "eslintConfig": {
     "extends": [
