--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "start": "node app.js",
     "server": "nodemon app.js",
     "client": "npm run start --prefix client",
-    "client:build": "npm run build --prefix client",
+    "build": "npm run build --prefix client",
     "dev": "cross-env NODE_ENV=production concurrently \"npm run server\" \"npm run client\""
   },
   "eslintConfig": {
