--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "server": "nodemon app.js",
     "client": "npm run start --prefix client",
     "build": "npm run build --prefix client",
-    "dev": "cross-env NODE_ENV=production concurrently \"npm run server\" \"npm run client\""
+    "dev": "cross-env NODE_ENV=production concurrently \"npm run server\" \"npm run client\"",
+    "heroku-postbuild": "cd react-ui/ && npm install --only=dev && NODE_ENV=development npm install --no-shrinkwrap && npm run build"
   },
   "eslintConfig": {
     "extends": [
